--- a/src/app/misc/footer/footer.component.html
+++ b/src/app/misc/footer/footer.component.html
@@ -1,1 +1,13 @@
-<p>footer works!</p>
+<footer>
+    <div class="footer-links">
+      <ul>
+        
+      <a routerLink='cgu'>Conditions d'utilisation</a>
+      
+      <a routerLink='mentions'>Mentions légales</a>
+      <a routerLink='cookies'>Gestion des cookies</a>
+      <a routerLink='contact'>Contact</a>
+      </ul>
+    </div>
+    <p>&copy; 2023 Carfleet. Tous droits réservés.</p>
+  </footer>
