--- a/src/app/misc/header/header.component.html
+++ b/src/app/misc/header/header.component.html
@@ -1,1 +1,16 @@
-<p>header works!</p>
+<header>
+    
+        <div class="logo">
+          <a routerLink="vehicles"> <img  class ="logo" src="assets/images/logo_site_carfleet.png" alt="logo"></a>
+        </div>
+
+        <h2> La réservation facile de votre véhicule de service </h2> 
+<div class="menu">
+    <ul>
+        <a routerLink="vehicles/search"> Recherche </a><br>
+        <a routerLink="reservations">Réservations</a>
+    </ul>
+
+
+    </div>
+</header>
