--- a/src/app/misc/cookies/cookies.component.css
+++ b/src/app/misc/cookies/cookies.component.css
@@ -1,4 +1,4 @@
-.cgu {
+.cookies{
     font-family: Arial, sans-serif;
     background-color: #8f8d8d; /* Couleur de fond gris */
     color: whitesmoke; /* Couleur de texte whitesmoke */
