--- a/src/app/misc/not-found/not-found.component.html
+++ b/src/app/misc/not-found/not-found.component.html
@@ -1,1 +1,9 @@
-<p>not-found works!</p>
+
+
+<div class="not-found">
+    <h1>404</h1>
+    <div class="text">
+    <h2>Page not found</h2>
+    <p>Sorry, the page you are looking for does not exist.</p>
+</div>
+</div>
