--- a/src/app/vehicle/vehicle-list/vehicle-list.component.html
+++ b/src/app/vehicle/vehicle-list/vehicle-list.component.html
@@ -1,19 +1,24 @@
-<form #f="ngForm" (submit)="trouvervehicule(f)">
+<h2>trouvez rapidement un véhicule de service !</h2>
+<div class="form-liste">
+<form #f="ngForm" (submit)="(f)">
     <label for="debutreservation">Début de la réservation</label>
-    <input type="date" id="debutreservation" name="debutreservation" ngModel name="debutreservation" required>
+    <input type="datetime-local" id="debutreservation" name="debutreservation" ngModel name="debutreservation" required><br>
     <label for="finreservation">Fin de la réservation</label>
-    <input type="date" id="finreservation" name="finreservation" ngModel name="finreservation" required>
-    <label for="heuredebutreservation">Heure de début de la réservation</label>
+    <input type="datetime-local" id="finreservation" name="finreservation" ngModel name="finreservation" required>
+    <!-- <label for="heuredebutreservation">Heure de début de la réservation</label>
     <input type="time" id="heuredebutreservation" name="heuredebutreservation" ngModel name="heuredebutreservation"
         required>
     <label for="heurefinreservation">Heure de fin de la réservation</label>
-    <input type="time" id="heurefinreservation" name="heurefinreservation" ngModel name="heurefinreservation" required>
+    <input type="time" id="heurefinreservation" name="heurefinreservation" ngModel name="heurefinreservation" required> -->
     <button type="submit">trouver véhicule</button>
 </form>
 
-<ul>
-    <li *ngFor="let vehicule of listVehicules">
-        {{vehicule.brand}}
-        <img [src]="vehicule.model.image" alt="vehicule.model">
+<div class="list">
+    <li *ngFor="let vehicle of vehiclesToDisplay">
+      <app-vehicle-card [vehicle]="vehicle">
+        <a [routerLink]="['/vehicle', vehicle.id]"></a>
+      </app-vehicle-card>
     </li>
-</ul>
+  </div>
+
+ 
