--- a/src/app/misc/footer/footer.component.css
+++ b/src/app/misc/footer/footer.component.css
@@ -1,7 +1,7 @@
 footer{
     background-color:rgba(34, 97, 117, 1);
     color: whitesmoke;
-    position: fixed;
+position: static;
     bottom: 0;
     width: 100%;
     height: 130px;
