--- a/src/app/vehicle/vehicle-add/vehicle-add.component.html
+++ b/src/app/vehicle/vehicle-add/vehicle-add.component.html
@@ -1,40 +1,30 @@
-<form #addvehicleForm="ngForm" (ngSubmit)="addVehicleSubmit()" >
-
+<form #addvehicleForm="ngForm" (ngSubmit)="addVehicleSubmit()">
 
     <select [(ngModel)]="brand" name=brand>
-        <option *ngFor="let brand of brandArray" value=brand>{{brand}}</option>
-       
+        <option *ngFor="let brand of catalogueBrands" [value]="brand">{{brand}}</option>
     </select>
     {{brand}}
+    
 
 
     <select [(ngModel)]="modelId" name=modelNamePeugeot *ngIf="brand=='peugeot'">
-        <option value=6>BOXER Asphalt 333</option>
-        <option value="208">208</option>
+        <option *ngFor="let model of catalogueModels[2].peugeot" [value]="model.id">{{model.modelName}}</option>
     </select>
-    {{modelId}}
-
+    
     <select [(ngModel)]="modelId" name=modelNameRenault *ngIf="brand=='renault'">
-        <option value="Clio">Clio</option>
-        <option value="Megane2">Megane2</option>
+        <option *ngFor="let model of catalogueModels[0].renault" [value]="model.id">{{model.modelName}}</option>
     </select>
 
     <select [(ngModel)]="modelId" name=modelNameCitroen *ngIf="brand=='citroen'">
-        <option value="C3">C3</option>
+        <option *ngFor="let model of catalogueModels[1].citroen" [value]="model.id">{{model.modelName}}</option>
     </select>
 
     <label for="licencePlate">Immatriculation</label>
     <input [(ngModel)]="licencePlate" type="text" id="licencePlate" name="licencePlate">
 
     <select [(ngModel)]="fleetId" name="fleet" id="fleet">
-        <option value=1>Strasbourg</option>
-        <option value=2>Paris</option>
-        <option value=3>Lyon</option>
-        <option value=4>Marseille</option>
-        <label for="fleet"></label>
-        <input type="text" id="fleet" name="fleet">
+        <option *ngFor="let fleet of catalogueFleets" [value]="fleet?.id">{{fleet?.fleetName}}</option>
     </select>
-
 
 
     <button type=submit>véhicule ajouté</button>
