Check vehicle details CSS, tweaked routes

--- a/src/app/vehicle/vehicle-card/vehicle-card.component.html
+++ b/src/app/vehicle/vehicle-card/vehicle-card.component.html
@@ -1,4 +1,4 @@
-<a [routerLink]="['/vehicle/',this.vehicle.id ]" >
+<a [routerLink]="['/vehicles/',this.vehicle.id ]" >
   <div class="vehicle-card">
 {{vehicle.brand}}
 <!-- {{vehicle.licencePlate}} -->
