--- a/src/app/vehicle/vehicle-add/vehicle-add.component.html
+++ b/src/app/vehicle/vehicle-add/vehicle-add.component.html
@@ -1,34 +1,35 @@
 <form #addvehicleForm="ngForm" (ngSubmit)="addVehicleSubmit()">
 
     <select [(ngModel)]="brand" name=brand>
-        <option *ngFor="let brand of catalogueBrands" [value]="brand">{{brand}}</option>
+        <option   *ngFor="let brand of catalogueBrands" [value]="brand">{{brand}}</option>
+     
     </select>
     {{brand}}
 
 
-
-    <select [(ngModel)]="vehicleModelName" (change)="viewModel()" name=modelNamePeugeot *ngIf="brand=='peugeot'">
+    <select [(ngModel)]="vehicleModelName" (click)="viewModel()"  name=modelNamePeugeot *ngIf="brand=='peugeot'">
         <option *ngFor="let model of catalogueModels[2].peugeot" [value]="model.modelName">{{model.modelName}}</option>
     </select>
-    {{vehicle.modelName}} {{vehicle.energy}} <!--{{vehicle.nbSeats}} {{vehicle.nbDoors}} {{vehicle.type}}-->
+   {{vehicle.modelName}} {{vehicle.energy}} {{vehicle.nbSeats}} {{vehicle.nbDoors}} {{vehicle.type}}
+   
 
-    <select [(ngModel)]="vehicleModelName" name=modelNameRenault *ngIf="brand=='renault'">
-        <option *ngFor="let model of catalogueModels[0].renault" [value]="model.modelName">{{model.modelName}}</option>
+    <select [(ngModel)]="vehicleModelName" (click)="viewModel()" name=modelNameRenault *ngIf="brand=='renault'">
+        <option   *ngFor="let model of catalogueModels[0].renault" [value]="model.modelName">{{model.modelName}}</option>
     </select>
-   <!-- {{vehicle.modelName}} {{vehicle.energy}} {{vehicle.nbSeats}} {{vehicle.nbDoors}} {{vehicle.type}}-->
-
-    <select [(ngModel)]="vehicleModelName" (change)="viewModel()" name=modelNameCitroen *ngIf="brand=='citroen'">
-        <option *ngFor="let model of catalogueModels[1].citroen" [value]="model.modelName">{{model.modelName}}</option>
+      
+   <select [(ngModel)]="vehicleModelName" (click)="viewModel()" name=modelNameCitroen *ngIf="brand=='citroen'">
+       <option  *ngFor="let model of catalogueModels[1].citroen" [value]="model.modelName">{{model.modelName}}</option>
+       
+       
     </select>
-    {{vehicle.modelName}} {{vehicle.energy}} {{vehicle.nbSeats}} {{vehicle.nbDoors}} {{vehicle.type}}
-
+    
     <label for="licencePlate">Immatriculation</label>
     <input [(ngModel)]="licencePlate" type="text" id="licencePlate" name="licencePlate">
-
+    
     <select [(ngModel)]="fleetId" name="fleet" id="fleet">
         <option *ngFor="let fleet of catalogueFleets" [value]="fleet?.id">{{fleet?.fleetName}}</option>
     </select>
-
+    
 
     <button type=submit>véhicule ajouté</button>
 
