--- a/src/app/vehicle/vehicle-card/vehicle-card.component.html
+++ b/src/app/vehicle/vehicle-card/vehicle-card.component.html
@@ -5,8 +5,8 @@
 {{vehicle.model.modelName}}
 {{vehicle.model.energy}}
 {{vehicle.model.type}}
-<!-- {{vehicle.model.nbDoors}}
-{{vehicle.model.nbSeats}} -->
+{{vehicle.model.nbDoors}}portes
+{{vehicle.model.nbSeats}}places
 
 {{vehicle.carburant}}
 <!-- {{vehicle.vehicleType}} -->
