--- a/src/app/vehicle/vehicle-details/vehicle-details.component.html
+++ b/src/app/vehicle/vehicle-details/vehicle-details.component.html
@@ -1,5 +1,5 @@
 <div id="details_vehicle">
-  <h2>{{ vehicleDetails.brand }} {{ vehicleDetails.model.modelName }}</h2>
+  <h2>{{ vehicleDetails.model.brand }} {{ vehicleDetails.model.modelName }}</h2>
   <img [src]="vehicleDetails.model.image" />
   <ul>
     <li>Type : {{ vehicleDetails.model.type }}</li>
