Connexion Login fonctionnelle

--- a/src/app/user/login/login.component.html
+++ b/src/app/user/login/login.component.html
@@ -58,8 +58,9 @@
           >Mémoriser mon identifiant</label
         >
       </div>
-      <button type="submit" [disabled]="loginForm.invalid">Connexion</button>
+      <button class="btn-primary" type="submit" [disabled]="loginForm.invalid">
+        Connexion
+      </button>
     </form>
   </div>
 </div>
-y
