filter by date vehicle list

--- a/src/app/vehicle/vehicle-add/vehicle-add.component.html
+++ b/src/app/vehicle/vehicle-add/vehicle-add.component.html
@@ -1,4 +1,4 @@
-<form #addvehicleForm="ngForm" (ngSubmit)="addVehicleSubmit()">
+<!-- <form #addvehicleForm="ngForm" (ngSubmit)="addVehicleSubmit()">
 
     <select [(ngModel)]="brand" name=brand>
         <option   *ngFor="let brand of catalogueBrands" [value]="brand">{{brand}}</option>
@@ -33,4 +33,4 @@
 
     <button type=submit>véhicule ajouté</button>
 
-</form>
+</form> -->
