--- a/src/app/misc/header/header.component.html
+++ b/src/app/misc/header/header.component.html
@@ -8,7 +8,8 @@
 <div class="menu">
     <ul>
         <a routerLink="vehicles/search"> Recherche </a><br>
-        <a routerLink="reservations">Réservations</a>
+        <a routerLink="reservations">Réservations</a><br>
+        <a routerLink="admin">Admin</a>
     </ul>
 
 
