Added methods to get user from token and do request to API with token's subject. Cleaned up authentification service. Added logout in header

--- a/src/app/misc/header/header.component.html
+++ b/src/app/misc/header/header.component.html
@@ -9,6 +9,7 @@
     <ul>
         <a routerLink="vehicles/search"> Recherche </a><br>
         <a routerLink="reservations">Réservations</a>
+        <a href="" (click)="logout()">Déconnection</a>
     </ul>
 
 
