Fixed typo in connection link in header, added guards to routes needing protection. User is saved and accessible

--- a/src/app/misc/header/header.component.html
+++ b/src/app/misc/header/header.component.html
@@ -10,7 +10,7 @@
         <a routerLink="vehicles/search"> Recherche </a><br>
         <a routerLink="reservations">Réservations</a><br>
         <a routerLink="admin">Admin</a>
-        <a href="" (click)="logout()">Déconnection</a>
+        <a href="" (click)="logout()">Déconnexion</a>
     </ul>
 
 
