--- a/src/app/user/admin-interface/admin-interface.component.html
+++ b/src/app/user/admin-interface/admin-interface.component.html
@@ -12,5 +12,5 @@
 </div>
 
 
-<a [routerLink]="['/vehicles/add']"><button class="btn">Ajouter un véhicule</button></a>
+<a [routerLink]="['/admin/vehicles/add']"><button class="btn">Ajouter un véhicule</button></a>
 <a [routerLink]="['/reservations']"><button class="btn">Historique des réservations</button></a>
