--- a/src/app/vehicle/vehicle-card/vehicle-card.component.html
+++ b/src/app/vehicle/vehicle-card/vehicle-card.component.html
@@ -1,4 +1,4 @@
-<a [routerLink]="['/vehicles/',this.vehicle.id ]" >
+<a [routerLink]="['/vehicles/' + vehicle.id]" >
   <div class="vehicle-card">
 {{vehicle.model.brand}}
 {{vehicle.model.modelName}}
